[gd_scene load_steps=10 format=3 uid="uid://drfnfhdej2kp8"]

[ext_resource type="Script" uid="uid://buop6viqv08kk" path="res://script/drill_ui.gd" id="1_drill_ui_script"]
[ext_resource type="PackedScene" uid="uid://bgnvqj8xi6u7e" path="res://scene/volumn.tscn" id="1_volumn"]
[ext_resource type="LabelSettings" uid="uid://cuf6m18dwphgd" path="res://theme/target_title_ipsc.tres" id="2_title_settings"]
[ext_resource type="PackedScene" uid="uid://bvmw1s06twfav" path="res://scene/shot_timer.tscn" id="3_shot_timer"]
[ext_resource type="LabelSettings" uid="uid://deg7d40rl6o81" path="res://theme/big_bold_timer_font.tres" id="4_big_bold"]
[ext_resource type="PackedScene" uid="uid://5awavhwtv8op" path="res://scene/custom_progress_bar.tscn" id="5_custom_progress"]
[ext_resource type="Texture2D" uid="uid://cj5m8qdpg1amv" path="res://asset/coin.png" id="6_coin_texture"]
[ext_resource type="Texture2D" uid="uid://bhksfu7pulyjs" path="res://asset/thunder.png" id="7_thunder_texture"]
[ext_resource type="PackedScene" uid="uid://unm5ps1c30g" path="res://scene/drill_complete_overlay.tscn" id="8_4gcga"]

[node name="DrillUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_drill_ui_script")

[node name="FPSLabel" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 30.0
grow_vertical = 0
text = "FPS: 60"

[node name="TopContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 268.0
grow_horizontal = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 0

[node name="TopLayout" type="VBoxContainer" parent="TopContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HeaderContainer" type="HBoxContainer" parent="TopContainer/TopLayout"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="ScoreContainer" type="HBoxContainer" parent="TopContainer/TopLayout/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CoinIcon" type="TextureRect" parent="TopContainer/TopLayout/HeaderContainer/ScoreContainer"]
layout_mode = 2
texture = ExtResource("6_coin_texture")
stretch_mode = 5

[node name="Score" type="Label" parent="TopContainer/TopLayout/HeaderContainer/ScoreContainer"]
layout_mode = 2
text = "--"
label_settings = ExtResource("2_title_settings")

[node name="TargetTypeTitle" type="Label" parent="TopContainer/TopLayout/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Target 1/5"
label_settings = ExtResource("2_title_settings")
horizontal_alignment = 1
vertical_alignment = 1

[node name="FastestContainer" type="HBoxContainer" parent="TopContainer/TopLayout/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer2" type="Control" parent="TopContainer/TopLayout/HeaderContainer/FastestContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ThunderIcon" type="TextureRect" parent="TopContainer/TopLayout/HeaderContainer/FastestContainer"]
layout_mode = 2
texture = ExtResource("7_thunder_texture")
stretch_mode = 5

[node name="FastestInterval" type="Label" parent="TopContainer/TopLayout/HeaderContainer/FastestContainer"]
layout_mode = 2
text = "--s"
label_settings = ExtResource("2_title_settings")

[node name="ProgressBarContainer" type="CenterContainer" parent="TopContainer/TopLayout"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="CustomProgressBar" parent="TopContainer/TopLayout/ProgressBarContainer" instance=ExtResource("5_custom_progress")]
custom_minimum_size = Vector2(280, 30)
layout_mode = 2

[node name="TimerContainer" type="CenterContainer" parent="TopContainer/TopLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="Timer" type="Label" parent="TopContainer/TopLayout/TimerContainer"]
layout_mode = 2
text = "00:00:00"
label_settings = ExtResource("4_big_bold")
horizontal_alignment = 1

[node name="DrillTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="ShotTimerOverlay" parent="." instance=ExtResource("3_shot_timer")]
layout_mode = 1

[node name="drill_complete_overlay" parent="." instance=ExtResource("8_4gcga")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 40.0
offset_bottom = 40.0
script = null

[node name="VolumeControl" parent="." instance=ExtResource("1_volumn")]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -120.0
offset_top = -420.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0
